Fixed scrollbar not showing on side menu

--- a/app/src/components/side-menu/side-menu.scss
+++ b/app/src/components/side-menu/side-menu.scss
@@ -1,6 +1,7 @@
 // Side menu
 side-menu {
   overflow-y: auto;
+  z-index: 1;
 }
 .side-menu-link {
   display: block;
